added lib for connecting messengers

--- a/.env.template
+++ b/.env.template
@@ -10,3 +10,5 @@ GITHUB_ACCESS_TOKEN=yoursupersecretaccesstoken
 OPEN_WEATHER_MAP_APP_ID=yoursupersecretappid
 HOME_POSITION_LAT=52.5069704
 HOME_POSITION_LON=13.2846503
+TELEGRAM_API_TOKEN=yoursupersecretaccesstoken
+TELEGRAM_RECEIVER_IDS=comma,separated,list,of,ids
