--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,7 +19,8 @@
     "baseUrl": ".",
     "paths": {
       "@smart-home-conx/utils": ["libs/utils/src/index.ts"],
-      "@smart-home-conx/auth": ["libs/auth/src/index.ts"]
+      "@smart-home-conx/auth": ["libs/auth/src/index.ts"],
+      "@smart-home-conx/messenger-connector": ["libs/messenger-connector/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
