--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,9 @@
               "apps/mqtt-client/src/favicon.ico",
               "apps/mqtt-client/src/assets"
             ],
-            "styles": ["apps/mqtt-client/src/styles.scss"],
+            "styles": [
+              "apps/mqtt-client/src/styles.scss"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -39,7 +41,6 @@
               "optimization": false,
               "outputHashing": "all",
               "sourceMap": false,
-              "extractCss": true,
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
@@ -57,7 +58,10 @@
                 }
               ]
             }
-          }
+          },
+          "outputs": [
+            "{options.outputPath}"
+          ]
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -85,7 +89,10 @@
               "apps/mqtt-client/tsconfig.spec.json",
               "apps/mqtt-client/tsconfig.editor.json"
             ],
-            "exclude": ["**/node_modules/**", "!apps/mqtt-client/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/mqtt-client/**/*"
+            ]
           }
         },
         "test": {
@@ -93,7 +100,10 @@
           "options": {
             "jestConfig": "apps/mqtt-client/jest.config.js",
             "passWithNoTests": true
-          }
+          },
+          "outputs": [
+            "coverage/apps/mqtt-client"
+          ]
         }
       }
     },
@@ -110,7 +120,9 @@
             "outputPath": "dist/apps/mqtt-broker",
             "main": "apps/mqtt-broker/src/main.ts",
             "tsConfig": "apps/mqtt-broker/tsconfig.app.json",
-            "assets": ["apps/mqtt-broker/src/assets"]
+            "assets": [
+              "apps/mqtt-broker/src/assets"
+            ]
           },
           "configurations": {
             "production": {
@@ -124,7 +136,10 @@
                 }
               ]
             }
-          }
+          },
+          "outputs": [
+            "{options.outputPath}"
+          ]
         },
         "serve": {
           "builder": "@nrwl/node:execute",
@@ -139,7 +154,10 @@
               "apps/mqtt-broker/tsconfig.app.json",
               "apps/mqtt-broker/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!apps/mqtt-broker/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/mqtt-broker/**/*"
+            ]
           }
         },
         "test": {
@@ -147,7 +165,10 @@
           "options": {
             "jestConfig": "apps/mqtt-broker/jest.config.js",
             "passWithNoTests": true
-          }
+          },
+          "outputs": [
+            "coverage/apps/mqtt-broker"
+          ]
         }
       }
     },
@@ -164,7 +185,9 @@
             "outputPath": "dist/apps/esp-pir-manager",
             "main": "apps/esp-pir-manager/src/main.ts",
             "tsConfig": "apps/esp-pir-manager/tsconfig.app.json",
-            "assets": ["apps/esp-pir-manager/src/assets"]
+            "assets": [
+              "apps/esp-pir-manager/src/assets"
+            ]
           },
           "configurations": {
             "production": {
@@ -178,7 +201,10 @@
                 }
               ]
             }
-          }
+          },
+          "outputs": [
+            "{options.outputPath}"
+          ]
         },
         "serve": {
           "builder": "@nrwl/node:execute",
@@ -193,7 +219,10 @@
               "apps/esp-pir-manager/tsconfig.app.json",
               "apps/esp-pir-manager/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!apps/esp-pir-manager/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/esp-pir-manager/**/*"
+            ]
           }
         },
         "test": {
@@ -201,7 +230,10 @@
           "options": {
             "jestConfig": "apps/esp-pir-manager/jest.config.js",
             "passWithNoTests": true
-          }
+          },
+          "outputs": [
+            "coverage/apps/esp-pir-manager"
+          ]
         }
       }
     },
@@ -218,7 +250,10 @@
               "libs/utils/tsconfig.lib.json",
               "libs/utils/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/utils/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/utils/**/*"
+            ]
           }
         },
         "test": {
@@ -226,7 +261,10 @@
           "options": {
             "jestConfig": "libs/utils/jest.config.js",
             "passWithNoTests": true
-          }
+          },
+          "outputs": [
+            "coverage/libs/utils"
+          ]
         }
       }
     },
@@ -243,7 +281,9 @@
             "outputPath": "dist/apps/esp-update-server",
             "main": "apps/esp-update-server/src/main.ts",
             "tsConfig": "apps/esp-update-server/tsconfig.app.json",
-            "assets": ["apps/esp-update-server/src/assets"]
+            "assets": [
+              "apps/esp-update-server/src/assets"
+            ]
           },
           "configurations": {
             "production": {
@@ -257,7 +297,10 @@
                 }
               ]
             }
-          }
+          },
+          "outputs": [
+            "{options.outputPath}"
+          ]
         },
         "serve": {
           "builder": "@nrwl/node:execute",
@@ -272,7 +315,10 @@
               "apps/esp-update-server/tsconfig.app.json",
               "apps/esp-update-server/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!apps/esp-update-server/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/esp-update-server/**/*"
+            ]
           }
         },
         "test": {
@@ -280,7 +326,10 @@
           "options": {
             "jestConfig": "apps/esp-update-server/jest.config.js",
             "passWithNoTests": true
-          }
+          },
+          "outputs": [
+            "coverage/apps/esp-update-server"
+          ]
         }
       }
     },
@@ -297,7 +346,9 @@
             "outputPath": "dist/apps/adesso-commuter-server",
             "main": "apps/adesso-commuter-server/src/main.ts",
             "tsConfig": "apps/adesso-commuter-server/tsconfig.app.json",
-            "assets": ["apps/adesso-commuter-server/src/assets"]
+            "assets": [
+              "apps/adesso-commuter-server/src/assets"
+            ]
           },
           "configurations": {
             "production": {
@@ -311,7 +362,10 @@
                 }
               ]
             }
-          }
+          },
+          "outputs": [
+            "{options.outputPath}"
+          ]
         },
         "serve": {
           "builder": "@nrwl/node:execute",
@@ -337,7 +391,10 @@
           "options": {
             "jestConfig": "apps/adesso-commuter-server/jest.config.js",
             "passWithNoTests": true
-          }
+          },
+          "outputs": [
+            "coverage/apps/adesso-commuter-server"
+          ]
         }
       }
     },
@@ -354,7 +411,9 @@
             "outputPath": "dist/apps/alexa-connector",
             "main": "apps/alexa-connector/src/main.ts",
             "tsConfig": "apps/alexa-connector/tsconfig.app.json",
-            "assets": ["apps/alexa-connector/src/assets"]
+            "assets": [
+              "apps/alexa-connector/src/assets"
+            ]
           },
           "configurations": {
             "production": {
@@ -368,7 +427,10 @@
                 }
               ]
             }
-          }
+          },
+          "outputs": [
+            "{options.outputPath}"
+          ]
         },
         "serve": {
           "builder": "@nrwl/node:execute",
@@ -383,7 +445,10 @@
               "apps/alexa-connector/tsconfig.app.json",
               "apps/alexa-connector/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!apps/alexa-connector/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/alexa-connector/**/*"
+            ]
           }
         },
         "test": {
@@ -391,7 +456,10 @@
           "options": {
             "jestConfig": "apps/alexa-connector/jest.config.js",
             "passWithNoTests": true
-          }
+          },
+          "outputs": [
+            "coverage/apps/alexa-connector"
+          ]
         }
       }
     },
@@ -408,7 +476,9 @@
             "outputPath": "dist/apps/api-gateway",
             "main": "apps/api-gateway/src/main.ts",
             "tsConfig": "apps/api-gateway/tsconfig.app.json",
-            "assets": ["apps/api-gateway/src/assets"]
+            "assets": [
+              "apps/api-gateway/src/assets"
+            ]
           },
           "configurations": {
             "production": {
@@ -422,7 +492,10 @@
                 }
               ]
             }
-          }
+          },
+          "outputs": [
+            "{options.outputPath}"
+          ]
         },
         "serve": {
           "builder": "@nrwl/node:execute",
@@ -437,7 +510,10 @@
               "apps/api-gateway/tsconfig.app.json",
               "apps/api-gateway/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!apps/api-gateway/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/api-gateway/**/*"
+            ]
           }
         },
         "test": {
@@ -445,7 +521,10 @@
           "options": {
             "jestConfig": "apps/api-gateway/jest.config.js",
             "passWithNoTests": true
-          }
+          },
+          "outputs": [
+            "coverage/apps/api-gateway"
+          ]
         }
       }
     },
@@ -462,7 +541,10 @@
               "libs/auth/tsconfig.lib.json",
               "libs/auth/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/auth/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/auth/**/*"
+            ]
           }
         },
         "test": {
@@ -470,7 +552,10 @@
           "options": {
             "jestConfig": "libs/auth/jest.config.js",
             "passWithNoTests": true
-          }
+          },
+          "outputs": [
+            "coverage/libs/auth"
+          ]
         }
       }
     },
@@ -487,7 +572,10 @@
               "libs/messenger-connector/tsconfig.lib.json",
               "libs/messenger-connector/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/messenger-connector/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/messenger-connector/**/*"
+            ]
           }
         },
         "test": {
@@ -495,7 +583,10 @@
           "options": {
             "jestConfig": "libs/messenger-connector/jest.config.js",
             "passWithNoTests": true
-          }
+          },
+          "outputs": [
+            "coverage/libs/messenger-connector"
+          ]
         }
       }
     }
