--- a/package.json
+++ b/package.json
@@ -58,23 +58,24 @@
     "format": "nx format:write",
     "format:write": "nx format:write",
     "format:check": "nx format:check",
-    "update": "ng update @nrwl/workspace",
-    "workspace-schematic": "nx workspace-schematic",
+    "update": "nx migrate latest",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "workspace-generator": "nx workspace-generator"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.0",
-    "@angular/common": "^10.1.0",
-    "@angular/compiler": "^10.1.0",
-    "@angular/core": "^10.1.0",
-    "@angular/forms": "^10.1.0",
-    "@angular/platform-browser": "^10.1.0",
-    "@angular/platform-browser-dynamic": "^10.1.0",
-    "@angular/router": "^10.1.0",
-    "@nrwl/angular": "10.3.1",
-    "@types/node": "^14.14.0",
+    "@angular/animations": "11.2.0",
+    "@angular/common": "11.2.0",
+    "@angular/compiler": "11.2.0",
+    "@angular/core": "11.2.0",
+    "@angular/forms": "11.2.0",
+    "@angular/platform-browser": "11.2.0",
+    "@angular/platform-browser-dynamic": "11.2.0",
+    "@angular/router": "11.2.0",
+    "@ngrx/component-store": "11.0.0",
+    "@nrwl/angular": "11.3.1",
+    "@types/node": "12.12.38",
     "aedes": "^0.43.0",
     "async-mqtt": "^2.6.1",
     "axios": "^0.21.1",
@@ -88,7 +89,7 @@
     "fs-extra": "^9.0.1",
     "http-proxy-middleware": "^1.0.6",
     "jsonwebtoken": "^8.5.1",
-    "ngx-mqtt": "^8.0.1",
+    "ngx-mqtt": "8.0.1",
     "node-telegram-bot-api": "^0.51.0",
     "octonode": "^0.10.0",
     "puppeteer": "^4.0.0",
@@ -106,27 +107,28 @@
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.3",
-    "@angular/cli": "~10.1.3",
-    "@angular/compiler-cli": "^10.1.0",
-    "@angular/language-service": "^10.1.0",
-    "@nrwl/cli": "10.3.1",
-    "@nrwl/express": "^10.3.1",
-    "@nrwl/jest": "10.3.1",
-    "@nrwl/node": "10.3.1",
-    "@nrwl/workspace": "10.3.1",
+    "@angular-devkit/build-angular": "0.1102.1",
+    "@angular/cli": "11.2.0",
+    "@angular/compiler-cli": "11.2.0",
+    "@angular/language-service": "11.2.0",
+    "@nrwl/cli": "11.3.1",
+    "@nrwl/express": "11.3.1",
+    "@nrwl/jest": "11.3.1",
+    "@nrwl/node": "11.3.1",
+    "@nrwl/tao": "11.3.1",
+    "@nrwl/workspace": "11.3.1",
     "@types/express": "4.17.0",
     "@types/jest": "26.0.8",
     "@types/socket.io": "^2.1.11",
     "@vercel/ncc": "^0.25.1",
-    "codelyzer": "~5.0.1",
+    "codelyzer": "6.0.0",
     "eslint": "7.10.0",
     "jest": "26.2.2",
-    "jest-preset-angular": "8.3.1",
-    "prettier": "2.0.4",
+    "jest-preset-angular": "8.3.2",
+    "prettier": "2.2.1",
     "ts-jest": "26.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
+    "ts-node": "9.1.1",
+    "tslint": "6.1.3",
     "typescript": "~4.0.3"
   }
 }
