--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,9 @@
 SERVICE_USER=me
 SERVICE_PASSWORD=s3cr3t
 SERVICE_SECRET=some-very-secret-string
+PUBLIC_DOMAIN=something.myfritz.net
+GIT_USER=me
+GIT_EMAIL=me@my-provider.com
 AMAZON_EMAIL=amazon_account@email.address
 AMAZON_PASSWORD=Very_Secret_Amazon_Account_Password
 AMAZON_MFA_SECRET=1234 5678 9ABC DEFG HIJK LMNO PQRS TUVW XYZ0 1234 5678 9ABC DEFG
