--- a/apps/mqtt-client/nginx.prod.conf
+++ b/apps/mqtt-client/nginx.prod.conf
@@ -5,9 +5,9 @@ http {
     server {
         listen 443 ssl;
         server_name localhost;
-        ssl_certificate /app/ssh/fullchain.pem;
-        ssl_certificate_key /app/ssh/privkey.pem;
-        ssl_trusted_certificate /app/ssh/chain.pem;
+        ssl_certificate /app/ssl/fullchain.pem;
+        ssl_certificate_key /app/ssl/privkey.pem;
+        ssl_trusted_certificate /app/ssl/chain.pem;
         root /usr/share/nginx/html;
         index index.html;
         location / {
