--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
               "apps/mqtt-client/src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "apps/mqtt-client/src/styles.scss"
             ],
             "scripts": []
