--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "build:mqtt-client": "nx build mqtt-client",
     "test:mqtt-client": "nx test mqtt-client",
     "docker:mqtt-client": "docker build -t mqtt-client -f apps/mqtt-client/Dockerfile .",
+    "docker:mqtt-client:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/mqtt-client-arm:latest -f ./apps/mqtt-client/Dockerfile .",
+    "docker:mqtt-client:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/mqtt-client-arm:latest -f ./apps/mqtt-client/Dockerfile .",
+    "docker:mqtt-client:push-to-reg": "docker push 192.168.178.28:5000/mqtt-client-arm:latest",
+    "docker:mqtt-client:publish:dev": "npm run docker:mqtt-client:build-for-armv7:dev && npm run docker:mqtt-client:push-to-reg",
+    "docker:mqtt-client:publish:prod": "npm run docker:mqtt-client:build-for-armv7:prod && npm run docker:mqtt-client:push-to-reg",
     "start:mqtt-broker": "nx serve mqtt-broker",
     "build:mqtt-broker": "nx build mqtt-broker",
     "test:mqtt-broker": "nx test mqtt-broker",
