--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     container_name: api-gateway
     ports:
       - 3333:3333
+    volumes:
+      - ./ssl:/app/ssl
     restart: always
 
   esp-pir-manager:
@@ -76,6 +78,8 @@ services:
   #   ports:
   #     - 9080:80
   #     - 9082:443
+  #   volumes:
+  #     - ./ssl:/app/ssl
   #   restart: always
 
   mqtt-client:
@@ -84,6 +88,8 @@ services:
     ports:
       - 9080:80
       - 9082:443
+    volumes:
+      - ./ssl:/app/ssl
     restart: always
 
   portainer:
