improved more images

--- a/package.json
+++ b/package.json
@@ -11,45 +11,65 @@
     "docker:build:all:prod": "docker-compose build --build-arg PRODUCTION=true",
     "docker:start:all:dev": "npm run docker:build:all:dev && docker-compose up -d",
     "docker:start:all:prod": "npm run docker:build:all:prod && docker-compose up -d",
+
+    "########### mqtt-client ###########": "############################################################################################################",
     "start:mqtt-client": "nx serve mqtt-client",
     "build:mqtt-client": "nx build mqtt-client",
     "test:mqtt-client": "nx test mqtt-client",
     "docker:mqtt-client": "docker build -t mqtt-client -f apps/mqtt-client/Dockerfile .",
-    "docker:mqtt-client:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/mqtt-client-arm:latest -f ./apps/mqtt-client/Dockerfile .",
-    "docker:mqtt-client:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/mqtt-client-arm:latest -f ./apps/mqtt-client/Dockerfile .",
-    "docker:mqtt-client:push-to-reg": "docker push 192.168.178.28:5000/mqtt-client-arm:latest",
+    "docker:mqtt-client:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/mqtt-client:latest -f ./apps/mqtt-client/Dockerfile .",
+    "docker:mqtt-client:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/mqtt-client:latest -f ./apps/mqtt-client/Dockerfile .",
+    "docker:mqtt-client:push-to-reg": "docker push 192.168.178.28:5000/mqtt-client:latest",
     "docker:mqtt-client:publish:dev": "npm run docker:mqtt-client:build-for-armv7:dev && npm run docker:mqtt-client:push-to-reg",
     "docker:mqtt-client:publish:prod": "npm run docker:mqtt-client:build-for-armv7:prod && npm run docker:mqtt-client:push-to-reg",
+
+    "########### mqtt-broker ###########": "############################################################################################################",
     "start:mqtt-broker": "nx serve mqtt-broker",
     "build:mqtt-broker": "nx build mqtt-broker",
     "test:mqtt-broker": "nx test mqtt-broker",
     "docker:mqtt-broker": "docker build -t mqtt-broker -f apps/mqtt-broker/Dockerfile .",
     "ncc:mqtt-broker": "ncc build dist/apps/mqtt-broker/main.js -m -C -o dist/apps/mqtt-broker/vendor",
+
+    "########### esp-pir-manager ###########": "############################################################################################################",
     "start:esp-pir-manager": "nx serve esp-pir-manager",
     "build:esp-pir-manager": "nx build esp-pir-manager",
     "test:esp-pir-manager": "nx test esp-pir-manager",
     "docker:esp-pir-manager": "docker build -t esp-pir-manager -f apps/esp-pir-manager/Dockerfile .",
     "ncc:esp-pir-manager": "ncc build dist/apps/esp-pir-manager/main.js -m -C -o dist/apps/esp-pir-manager/vendor",
+
+    "########### esp-update-server ###########": "############################################################################################################",
     "start:esp-update-server": "nx serve esp-update-server",
     "build:esp-update-server": "nx build esp-update-server",
     "test:esp-update-server": "nx test esp-update-server",
     "docker:esp-update-server": "docker build -t esp-update-server -f apps/esp-update-server/Dockerfile .",
     "ncc:esp-update-server": "ncc build dist/apps/esp-update-server/main.js -m -C -o dist/apps/esp-update-server/vendor",
+
+    "########### alexa-connector ###########": "############################################################################################################",
     "start:alexa-connector": "npm run create-env:alexa-connector && nx serve alexa-connector",
     "build:alexa-connector": "npm run create-env:alexa-connector && nx build alexa-connector",
     "test:alexa-connector": "nx test alexa-connector",
     "create-env:alexa-connector": "node apps/alexa-connector/create-env.js",
     "docker:alexa-connector": "docker build -t alexa-connector -f apps/alexa-connector/Dockerfile .",
     "ncc:alexa-connector": "ncc build dist/apps/alexa-connector/main.js -m -C -o dist/apps/alexa-connector/vendor",
+    "docker:alexa-connector:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/alexa-connector:latest -f ./apps/alexa-connector/Dockerfile .",
+    "docker:alexa-connector:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/alexa-connector:latest -f ./apps/alexa-connector/Dockerfile .",
+    "docker:alexa-connector:push-to-reg": "docker push 192.168.178.28:5000/alexa-connector:latest",
+    "docker:alexa-connector:publish:dev": "npm run docker:alexa-connector:build-for-armv7:dev && npm run docker:alexa-connector:push-to-reg",
+    "docker:alexa-connector:publish:prod": "npm run docker:alexa-connector:build-for-armv7:prod && npm run docker:alexa-connector:push-to-reg",
+
+    "########### adesso-commuter-server ###########": "############################################################################################################",
     "start:adesso-commuter-server": "nx serve adesso-commuter-server",
     "build:adesso-commuter-server": "nx build adesso-commuter-server",
     "test:adesso-commuter-server": "nx test adesso-commuter-server",
     "docker:adesso-commuter-server": "docker build -t adesso-commuter-server -f apps/adesso-commuter-server/Dockerfile .",
     "ncc:adesso-commuter-server": "ncc build dist/apps/adesso-commuter-server/main.js -m -C -o dist/apps/adesso-commuter-server/vendor",
+
+    "########### api-gateway ###########": "############################################################################################################",
     "start:api-gateway": "nx serve api-gateway",
     "build:api-gateway": "nx build api-gateway",
     "docker:api-gateway": "docker build -t api-gateway -f apps/api-gateway/Dockerfile .",
     "ncc:api-gateway": "ncc build dist/apps/api-gateway/main.js -m -C -o dist/apps/api-gateway/vendor",
+
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
     "affected:apps": "nx affected:apps",
