--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,12 +57,23 @@ services:
       - 9062:9062
     restart: always
 
+  # alexa-connector:
+  #   image: alexa-connector
+  #   build:
+  #     context: .
+  #     dockerfile: apps/alexa-connector/Dockerfile
+  #   container_name: alexa-connector
+  #   volumes:
+  #     - amazon-env:/app/assets/alexa-remote-control/env
+  #   ports:
+  #     - 9072:9072
+  #   restart: always
+
   alexa-connector:
-    image: alexa-connector
-    build:
-      context: .
-      dockerfile: apps/alexa-connector/Dockerfile
+    image: localhost:5000/alexa-connector:latest
     container_name: alexa-connector
+    depends_on:
+      - registry
     volumes:
       - amazon-env:/app/assets/alexa-remote-control/env
     ports:
@@ -83,8 +94,10 @@ services:
   #   restart: always
 
   mqtt-client:
-    image: localhost:5000/mqtt-client-arm
-    container_name: mqtt-client-arm
+    image: localhost:5000/mqtt-client:latest
+    container_name: mqtt-client
+    depends_on:
+      - registry
     ports:
       - 9080:80
       - 9082:443
