--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "docker:build:all:prod": "docker-compose build --build-arg PRODUCTION=true",
     "docker:start:all:dev": "npm run docker:build:all:dev && docker-compose up -d",
     "docker:start:all:prod": "npm run docker:build:all:prod && docker-compose up -d",
+    "docker:publish:all:prod": "npm run docker:mqtt-client:publish:prod && npm run docker:mqtt-broker:publish:prod && npm run docker:esp-pir-manager:publish:prod && npm run docker:esp-update-server:publish:prod && npm run docker:alexa-connector:publish:prod && npm run docker:adesso-commuter-server:publish:prod && npm run docker:api-gateway:publish:prod",
 
     "########### mqtt-client ###########": "############################################################################################################",
     "start:mqtt-client": "nx serve mqtt-client",
@@ -29,6 +30,11 @@
     "test:mqtt-broker": "nx test mqtt-broker",
     "docker:mqtt-broker": "docker build -t mqtt-broker -f apps/mqtt-broker/Dockerfile .",
     "ncc:mqtt-broker": "ncc build dist/apps/mqtt-broker/main.js -m -C -o dist/apps/mqtt-broker/vendor",
+    "docker:mqtt-broker:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/mqtt-broker:latest -f ./apps/mqtt-broker/Dockerfile .",
+    "docker:mqtt-broker:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/mqtt-broker:latest -f ./apps/mqtt-broker/Dockerfile .",
+    "docker:mqtt-broker:push-to-reg": "docker push 192.168.178.28:5000/mqtt-broker:latest",
+    "docker:mqtt-broker:publish:dev": "npm run docker:mqtt-broker:build-for-armv7:dev && npm run docker:mqtt-broker:push-to-reg",
+    "docker:mqtt-broker:publish:prod": "npm run docker:mqtt-broker:build-for-armv7:prod && npm run docker:mqtt-broker:push-to-reg",
 
     "########### esp-pir-manager ###########": "############################################################################################################",
     "start:esp-pir-manager": "nx serve esp-pir-manager",
@@ -36,6 +42,11 @@
     "test:esp-pir-manager": "nx test esp-pir-manager",
     "docker:esp-pir-manager": "docker build -t esp-pir-manager -f apps/esp-pir-manager/Dockerfile .",
     "ncc:esp-pir-manager": "ncc build dist/apps/esp-pir-manager/main.js -m -C -o dist/apps/esp-pir-manager/vendor",
+    "docker:esp-pir-manager:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/esp-pir-manager:latest -f ./apps/esp-pir-manager/Dockerfile .",
+    "docker:esp-pir-manager:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/esp-pir-manager:latest -f ./apps/esp-pir-manager/Dockerfile .",
+    "docker:esp-pir-manager:push-to-reg": "docker push 192.168.178.28:5000/esp-pir-manager:latest",
+    "docker:esp-pir-manager:publish:dev": "npm run docker:esp-pir-manager:build-for-armv7:dev && npm run docker:esp-pir-manager:push-to-reg",
+    "docker:esp-pir-manager:publish:prod": "npm run docker:esp-pir-manager:build-for-armv7:prod && npm run docker:esp-pir-manager:push-to-reg",
 
     "########### esp-update-server ###########": "############################################################################################################",
     "start:esp-update-server": "nx serve esp-update-server",
@@ -43,6 +54,11 @@
     "test:esp-update-server": "nx test esp-update-server",
     "docker:esp-update-server": "docker build -t esp-update-server -f apps/esp-update-server/Dockerfile .",
     "ncc:esp-update-server": "ncc build dist/apps/esp-update-server/main.js -m -C -o dist/apps/esp-update-server/vendor",
+    "docker:esp-update-server:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/esp-update-server:latest -f ./apps/esp-update-server/Dockerfile .",
+    "docker:esp-update-server:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/esp-update-server:latest -f ./apps/esp-update-server/Dockerfile .",
+    "docker:esp-update-server:push-to-reg": "docker push 192.168.178.28:5000/esp-update-server:latest",
+    "docker:esp-update-server:publish:dev": "npm run docker:esp-update-server:build-for-armv7:dev && npm run docker:esp-update-server:push-to-reg",
+    "docker:esp-update-server:publish:prod": "npm run docker:esp-update-server:build-for-armv7:prod && npm run docker:esp-update-server:push-to-reg",
 
     "########### alexa-connector ###########": "############################################################################################################",
     "start:alexa-connector": "npm run create-env:alexa-connector && nx serve alexa-connector",
@@ -63,12 +79,22 @@
     "test:adesso-commuter-server": "nx test adesso-commuter-server",
     "docker:adesso-commuter-server": "docker build -t adesso-commuter-server -f apps/adesso-commuter-server/Dockerfile .",
     "ncc:adesso-commuter-server": "ncc build dist/apps/adesso-commuter-server/main.js -m -C -o dist/apps/adesso-commuter-server/vendor",
+    "docker:adesso-commuter-server:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/adesso-commuter-server:latest -f ./apps/adesso-commuter-server/Dockerfile .",
+    "docker:adesso-commuter-server:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/adesso-commuter-server:latest -f ./apps/adesso-commuter-server/Dockerfile .",
+    "docker:adesso-commuter-server:push-to-reg": "docker push 192.168.178.28:5000/adesso-commuter-server:latest",
+    "docker:adesso-commuter-server:publish:dev": "npm run docker:adesso-commuter-server:build-for-armv7:dev && npm run docker:adesso-commuter-server:push-to-reg",
+    "docker:adesso-commuter-server:publish:prod": "npm run docker:adesso-commuter-server:build-for-armv7:prod && npm run docker:adesso-commuter-server:push-to-reg",
 
     "########### api-gateway ###########": "############################################################################################################",
     "start:api-gateway": "nx serve api-gateway",
     "build:api-gateway": "nx build api-gateway",
     "docker:api-gateway": "docker build -t api-gateway -f apps/api-gateway/Dockerfile .",
     "ncc:api-gateway": "ncc build dist/apps/api-gateway/main.js -m -C -o dist/apps/api-gateway/vendor",
+    "docker:api-gateway:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/api-gateway:latest -f ./apps/api-gateway/Dockerfile .",
+    "docker:api-gateway:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/api-gateway:latest -f ./apps/api-gateway/Dockerfile .",
+    "docker:api-gateway:push-to-reg": "docker push 192.168.178.28:5000/api-gateway:latest",
+    "docker:api-gateway:publish:dev": "npm run docker:api-gateway:build-for-armv7:dev && npm run docker:api-gateway:push-to-reg",
+    "docker:api-gateway:publish:prod": "npm run docker:api-gateway:build-for-armv7:prod && npm run docker:api-gateway:push-to-reg",
 
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
